Update the resources used in mysql-ha solution

--- a/config-connector/solutions/sql/kpt/mysql-ha/secret.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-ha/secret.yaml
@@ -16,6 +16,6 @@ kind: Secret
 metadata:
   name: mysql-ha-secret
 data:
-  password1: "${PASSWORD_1?}" # {"$ref":"#/definitions/io.k8s.cli.setters.password-1"}
-  password2: "${PASSWORD_2?}" # {"$ref":"#/definitions/io.k8s.cli.setters.password-2"}
-  password3: "${PASSWORD_3?}" # {"$ref":"#/definitions/io.k8s.cli.setters.password-3"}
+  password1: "${PASSWORD_1?}" # {"$ref":"#/definitions/io.k8s.cli.setters.test-pw"}
+  password2: "${PASSWORD_2?}" # {"$ref":"#/definitions/io.k8s.cli.setters.test2-pw"}
+  password3: "${PASSWORD_3?}" # {"$ref":"#/definitions/io.k8s.cli.setters.test3-pw"}
