--- a/config-connector/solutions/sql/kpt/mysql-ha/sqluser.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-ha/sqluser.yaml
@@ -14,7 +14,7 @@
 apiVersion: sql.cnrm.cloud.google.com/v1beta1
 kind: SQLUser
 metadata:
-  name: ${USERNAME_1?} # {"$ref":"#/definitions/io.k8s.cli.setters.username-1"}
+  name: test
 spec:
   instanceRef:
     name: mysql-ha-solution # {"$ref":"#/definitions/io.k8s.cli.setters.instance-name"}
@@ -28,11 +28,11 @@ spec:
 apiVersion: sql.cnrm.cloud.google.com/v1beta1
 kind: SQLUser
 metadata:
-  name: ${USERNAME_2?} # {"$ref":"#/definitions/io.k8s.cli.setters.username-2"}
+  name: test2
 spec:
   instanceRef:
     name: mysql-ha-solution # {"$ref":"#/definitions/io.k8s.cli.setters.instance-name"}
-  host: "%"
+  host: localhost
   password:
     valueFrom:
       secretKeyRef:
@@ -42,11 +42,11 @@ spec:
 apiVersion: sql.cnrm.cloud.google.com/v1beta1
 kind: SQLUser
 metadata:
-  name: ${USERNAME_3?} # {"$ref":"#/definitions/io.k8s.cli.setters.username-3"}
+  name: test3
 spec:
   instanceRef:
     name: mysql-ha-solution # {"$ref":"#/definitions/io.k8s.cli.setters.instance-name"}
-  host: "%"
+  host: localhost
   password:
     valueFrom:
       secretKeyRef:
