--- a/config-connector/solutions/iam/helm/service-account/templates/iampolicymember.yaml
+++ b/config-connector/solutions/iam/helm/service-account/templates/iampolicymember.yaml
@@ -18,8 +18,8 @@ metadata:
   name: iampolicymember-service-account
 spec:
   member: {{ required "IAM member is required!" .Values.iamPolicyMember.iamMember }}
-  role: {{ .Values.iamPolicyMember.role | default "roles/iam.serviceAccountKeyAdmin" }}
+  role: {{ .Values.iamPolicyMember.role }}
   resourceRef:
     apiVersion: iam.cnrm.cloud.google.com/v1beta1
     kind: IAMServiceAccount
-    name: {{ .Values.serviceAccount.name | default "service-account-solution" }}
+    name: {{ .Values.serviceAccount.name }}
