--- a/config-connector/solutions/iam/helm/service-account/templates/iamserviceaccount.yaml
+++ b/config-connector/solutions/iam/helm/service-account/templates/iamserviceaccount.yaml
@@ -15,4 +15,4 @@
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMServiceAccount
 metadata:
-  name: {{ .Values.serviceAccount.name | default "service-account-solution" }}
+  name: {{ .Values.serviceAccount.name }}
