--- a/config-connector/solutions/sql/kpt/mysql-public/sqlinstance.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-public/sqlinstance.yaml
@@ -32,8 +32,8 @@ spec:
       ipv4Enabled: true
       requireSsl: true
       authorizedNetworks:
-      - name: mysql-public-solution-sample
-        value: 130.211.0.0/28
+      - name: mysql-public-solution-sample # {"$ref":"#/definitions/io.k8s.cli.setters.authorized-network"}
+        value: 130.211.0.0/28 # {"$ref":"#/definitions/io.k8s.cli.setters.authorized-network-cidr"}
     locationPreference:
       zone: us-central1-c
     maintenanceWindow:
