--- a/config-connector/solutions/sql/kpt/mysql-public/sqluser.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-public/sqluser.yaml
@@ -14,7 +14,7 @@
 apiVersion: sql.cnrm.cloud.google.com/v1beta1
 kind: SQLUser
 metadata:
-  name: ${USERNAME?} # {"$ref":"#/definitions/io.k8s.cli.setters.username"}
+  name: default
 spec:
   instanceRef:
     name: mysql-public-solution # {"$ref":"#/definitions/io.k8s.cli.setters.instance-name"}
