Restore mysql-public password setter

--- a/config-connector/solutions/sql/kpt/mysql-public/secret.yaml
+++ b/config-connector/solutions/sql/kpt/mysql-public/secret.yaml
@@ -16,4 +16,4 @@ kind: Secret
 metadata:
   name: mysql-public-secret
 data:
-  password: dGVzdAo=
+  password: ${PASSWORD?} # {"$ref":"#/definitions/io.k8s.cli.setters.password"}
