--- a/config-connector/tests/testcases/iam/kpt/kms-key-ring/original_values.yaml
+++ b/config-connector/tests/testcases/iam/kpt/kms-key-ring/original_values.yaml
@@ -11,4 +11,4 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-project-id: ${PROJECT_ID?}
+iam-member: ${IAM_MEMBER?}
