--- a/dm/templates/iam_member/examples/iam_member_resource.yaml
+++ b/dm/templates/iam_member/examples/iam_member_resource.yaml
@@ -8,6 +8,8 @@
 # Replace `group-address` with a valid group. 
 # Replace `domain-name` with a valid domain.
 # Replace `folderId` with a folder ID to assign roles to.
+# Replave `bucket-name-example` with a valid name of a GCS Bucket.
+# Replave `function-name-example` with a valid name of a CloudFunction.
 
 
 imports:
@@ -26,6 +28,20 @@ resources:
             - serviceAccount:<FIXME:service-account-example:example@myprojectname.gserviceaccount.com>
         - role: roles/storage.objectViewer
           bucket: <FIXME:bucket-name-example:mybucket>
+          members:
+            - group:<FIXME:group-address-example:admins@example.com>
+            - domain:<FIXME:domain-name-example:example.com>
+  - name: iam-member-function
+    type: iam_member.py
+    properties:
+      roles:
+        - role: roles/cloudfunctions.developer
+          cloudFunction: <FIXME:function-name-example:myfunction>
+          members:
+            - user:<FIXME:user-email-example:name@example.com>
+            - serviceAccount:<FIXME:service-account-example:example@myprojectname.gserviceaccount.com>
+        - role: roles/cloudfunctions.invoker
+          cloudFunction: <FIXME:function-name-example:myfunction>
           members:
             - group:<FIXME:group-address-example:admins@example.com>
             - domain:<FIXME:domain-name-example:example.com>
