--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 
-# need to change this to VERSION=`git describe --tags`
+# Changing this value will trigger a new release
 VERSION=v0.3.2
 BINARY=bin/cft
 GITHUB_REPO=github.com/GoogleCloudPlatform/cloud-foundation-toolkit
