Add the option to run all the tests in one command

--- a/config-connector/tests/testcases/projects/kpt/owned-project/required_fields_only.yaml
+++ b/config-connector/tests/testcases/projects/kpt/owned-project/required_fields_only.yaml
@@ -14,4 +14,4 @@
 billing-account: $BILLING_ACCOUNT_ID
 folder-id: $FOLDER_ID
 iam-member: $IAM_MEMBER
-project-id: $OWNED_PROJECT_ID-$RANDOM_ID
+project-id: $PROJECT_ID-$RANDOM_ID
