--- a/config-connector/tests/testcases/environments.template
+++ b/config-connector/tests/testcases/environments.template
@@ -22,11 +22,10 @@ HOST_PROJECT_ID: ${HOST_PROJECT_ID?}
 IAM_MEMBER: ${IAM_MEMBER?}
 INSTANCE_NAME: ${INSTANCE_NAME?}
 ORG_ID: ${ORG_ID?}
-OWNED_PROJECT_ID: ${OWNED_PROJECT_ID?}
 # PASSWORD needs to be base64-encoded.
 PASSWORD: ${PASSWORD?}
+PROJECT_ID: ${PROJECT_ID?}
 SERVICE_PROJECT_ID: ${SERVICE_PROJECT_ID?}
-SIMPLE_PROJECT_ID: ${SIMPLE_PROJECT_ID?}
 USERNAME_1: ${USERNAME_1?}
 USERNAME_2: ${USERNAME_2?}
 USERNAME_3: ${USERNAME_3?}
