--- a/config-connector/solutions/networking/helm/mci/lb/templates/gcp-backend-service.yaml
+++ b/config-connector/solutions/networking/helm/mci/lb/templates/gcp-backend-service.yaml
@@ -3,7 +3,8 @@ kind: ComputeBackendService
 metadata:
   name: node-app-backend-service
 spec:
-  healthCheckRef:
-    name: node-app-backend-healthcheck
+  healthChecks:
+  - healthCheckRef:
+      name: node-app-backend-healthcheck
   protocol: HTTP
   location: global
