--- a/config-connector/solutions/networking/helm/mci/lb/values.yaml
+++ b/config-connector/solutions/networking/helm/mci/lb/values.yaml
@@ -3,11 +3,13 @@ region: us-central1
 cluster1:
   name: cluster-na
   zone: us-central1-a
+  masterAuthUser: user
   masterAuthPwd: password12345678
 cluster2:
   name: cluster-eu
   zone: us-central1-a
+  masterAuthUser: user
   masterAuthPwd: password12345678
-# {{ required "projectId is required!" .Values.projectId }}
+localMessage:
 
 
