--- a/config-connector/solutions/networking/helm/mci/cluster/templates/service.yaml
+++ b/config-connector/solutions/networking/helm/mci/cluster/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: node-app-backend
+  name: node-app-backend-3
   annotations:
     cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
     anthos.cft.dev/autoneg: '{"name":"node-app-backend-service", "max_rate_per_endpoint":100}'
