--- a/config-connector/solutions/networking/helm/mci/lb/templates/gcp-cluster-1.yaml
+++ b/config-connector/solutions/networking/helm/mci/lb/templates/gcp-cluster-1.yaml
@@ -4,8 +4,11 @@ metadata:
   name: {{ required "name is required!" .Values.cluster1.name }}
 spec:
   location: {{ required "location is required!" .Values.cluster1.zone }}
-  initialNodeCount: 1
-  loggingService: none
+  initialNodeCount: 2
+  loggingService: logging.googleapis.com/kubernetes
+  monitoringService: monitoring.googleapis.com/kubernetes
+  ipAllocationPolicy:
+    servicesIpv4CidrBlock: ""
   nodeConfig:
     oauthScopes:
     - "https://www.googleapis.com/auth/cloud-platform"
