--- a/config-connector/solutions/networking/helm/mci/lb/templates/gcp-custom-role-autoneg.yaml
+++ b/config-connector/solutions/networking/helm/mci/lb/templates/gcp-custom-role-autoneg.yaml
@@ -1,7 +1,7 @@
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMCustomRole
 metadata:
-  name: autoneg
+  name: autonegrole
 spec:
   title: Autoneg role
   permissions:
