changing StorageBucket.name as a required field
changing Values.StorageBucket.name  as a required field

--- a/config-connector/solutions/iam/helm/storage-bucket-iam/templates/iampolicymember.yaml
+++ b/config-connector/solutions/iam/helm/storage-bucket-iam/templates/iampolicymember.yaml
@@ -22,4 +22,4 @@ spec:
   resourceRef:
     apiVersion: storage.cnrm.cloud.google.com/v1beta1
     kind: StorageBucket
-    external: {{ .Values.StorageBucket.name }}
+    external: {{ required "Existing Storage Bucket name is required" .Values.StorageBucket.name }}
