--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/k8s-cluster-1-secret-pwd.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/k8s-cluster-1-secret-pwd.yaml
@@ -12,14 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: iam.cnrm.cloud.google.com/v1beta1
-kind: IAMPolicyMember
+apiVersion: v1
+kind: Secret
 metadata:
-  name: iampolicymember-autoneg-custom
-spec:
-  member: serviceAccount:autoneg-system@{{ required "projectId is required!" .Values.projectId }}.iam.gserviceaccount.com
-  role: projects/{{ required "projectId is required!" .Values.projectId }}/roles/autonegrole
-  resourceRef:
-    apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
-    kind: Project
-    external: projects/{{ required "projectId is required!" .Values.projectId }}
+  name: cluster-1-secret-pwd
+stringData:
+  password: {{ required "password is required!" .Values.cluster1.masterAuthPwd }}
