--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/k8s-cluster-2-secret-pwd.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/k8s-cluster-2-secret-pwd.yaml
@@ -12,16 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: iam.cnrm.cloud.google.com/v1beta1
-kind: IAMPolicy
+apiVersion: v1
+kind: Secret
 metadata:
-  name: iampolicy-autoneg-workloadidentity
-spec:
-  resourceRef:
-    apiVersion: iam.cnrm.cloud.google.com/v1beta1
-    kind: IAMServiceAccount
-    name: autoneg-system
-  bindings:
-    - role: roles/iam.workloadIdentityUser
-      members:
-        - serviceAccount:{{ required "projectId is required!" .Values.projectId }}.svc.id.goog[autoneg-system/default]
+  name: cluster-2-secret-pwd
+stringData:
+  password: {{ required "password is required!" .Values.cluster2.masterAuthPwd }}
