--- a/config-connector/solutions/networking/helm/autoneg/lb/values.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/values.yaml
@@ -12,15 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: compute.cnrm.cloud.google.com/v1beta1
-kind: ComputeForwardingRule
-metadata:
-  name: node-app-forwarding-rule
-spec:
-  target:
-    targetHTTPProxyRef:
-      name: node-app-target-proxy
-  portRange: "80"
-  ipProtocol: "TCP"
-  ipVersion: "IPV4"
-  location: global
+projectId:
+region: us-central1
+cluster1:
+  name: cluster-na
+  zone: us-central1-a
+  masterAuthUser: user
+  masterAuthPwd: password12345678
+cluster2:
+  name: cluster-eu
+  zone: europe-west2-a
+  masterAuthUser: user
+  masterAuthPwd: password12345678
+localMessage:
