--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-compute-firewall.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-compute-firewall.yaml
@@ -12,9 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart to deploy load balancing resources for GCP multi-cluster ingress
-name: gcp-mci-lb
-version: 0.1.0
-icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Globe_icon.svg/1024px-Globe_icon.svg.png
+apiVersion: compute.cnrm.cloud.google.com/v1beta1
+kind: ComputeFirewall
+metadata:
+  name: fw-allow-mci-neg
+spec:
+  allow:
+    - protocol: tcp
+  sourceRanges:
+    - "130.211.0.0/22"
+    - "35.191.0.0/16"
+  networkRef:
+    name: default
+
