--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-compute-forwarding-rule.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-compute-forwarding-rule.yaml
@@ -12,14 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: iam.cnrm.cloud.google.com/v1beta1
-kind: IAMCustomRole
+apiVersion: compute.cnrm.cloud.google.com/v1beta1
+kind: ComputeForwardingRule
 metadata:
-  name: autonegrole
+  name: node-app-forwarding-rule
 spec:
-  title: Autoneg role
-  permissions:
-    - compute.backendServices.get
-    - compute.backendServices.update
-    - compute.networkEndpointGroups.use
-    - compute.healthChecks.useReadOnly
+  target:
+    targetHTTPProxyRef:
+      name: node-app-target-proxy
+  portRange: "80"
+  ipProtocol: "TCP"
+  ipVersion: "IPV4"
+  location: global
+
