--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-default-network.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-default-network.yaml
@@ -12,9 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-kind: Secret
+apiVersion: compute.cnrm.cloud.google.com/v1beta1
+kind: ComputeNetwork
 metadata:
-  name: cluster-2-secret-pwd
-stringData:
-  password: {{ required "password is required!" .Values.cluster2.masterAuthPwd }}
+  name: default
+  annotations:
+    cnrm.cloud.google.com/deletion-policy: abandon
+spec:
+  description: Default network for the project
+
