--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-policy-autoneg-custom.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-policy-autoneg-custom.yaml
@@ -12,15 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: compute.cnrm.cloud.google.com/v1beta1
-kind: ComputeFirewall
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicyMember
 metadata:
-  name: fw-allow-mci-neg
+  name: iampolicymember-autoneg-custom
 spec:
-  allow:
-    - protocol: tcp
-  sourceRanges:
-    - "130.211.0.0/22"
-    - "35.191.0.0/16"
-  networkRef:
-    name: default
+  member: serviceAccount:autoneg-system@{{ required "projectId is required!" .Values.projectId }}.iam.gserviceaccount.com
+  role: projects/{{ required "projectId is required!" .Values.projectId }}/roles/autonegrole
+  resourceRef:
+    apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+    kind: Project
+    external: projects/{{ required "projectId is required!" .Values.projectId }}
