--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-service-account-autoneg.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-service-account-autoneg.yaml
@@ -12,14 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: compute.cnrm.cloud.google.com/v1beta1
-kind: ComputeURLMap
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMServiceAccount
 metadata:
-  name: node-app-url-map
-  labels:
-    retry: again
+  name: autoneg-system
 spec:
-  defaultService:
-    backendServiceRef:
-      name: node-app-backend-service
-  location: global
+  displayName: Autoneg Service Account
