--- a/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-target-http-proxy.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/lb/templates/gcp-target-http-proxy.yaml
@@ -12,18 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-apiVersion: v1
-kind: Service
+apiVersion: compute.cnrm.cloud.google.com/v1beta1
+kind: ComputeTargetHTTPProxy
 metadata:
-  name: node-app-backend
-  annotations:
-    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
-    anthos.cft.dev/autoneg: '{"name":"node-app-backend-service", "max_rate_per_endpoint":100}'
+  name: node-app-target-proxy
 spec:
-  type: ClusterIP
-  selector:
-    app: node-app
-  ports:
-  - port: 80
-    targetPort: 8080
+  description: Proxy for node app
+  urlMapRef:
+    name: node-app-url-map
+  location: global
+
