--- a/config-connector/solutions/networking/helm/autoneg/clusters/Chart.yaml
+++ b/config-connector/solutions/networking/helm/autoneg/clusters/Chart.yaml
@@ -14,7 +14,7 @@
 
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart to deploy load balancing resources for GCP autoneg solution
-name: gcp-mci-lb
+description: A Helm chart to deploy the clusters for for GCP autoneg solution
+name: gcp-autoneg-clusters
 version: 0.1.0
 icon: https://upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Globe_icon.svg/1024px-Globe_icon.svg.png
