--- a/config-connector/solutions/projects/kpt/simple-project/project.yaml
+++ b/config-connector/solutions/projects/kpt/simple-project/project.yaml
@@ -15,11 +15,10 @@ apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Project
 metadata:
   annotations:
-    cnrm.cloud.google.com/organization-id: "${ORG_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
-  name: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
+    cnrm.cloud.google.com/organization-id: "my-org-id" # {"$ref":"#/definitions/io.k8s.cli.setters.org-id"}
+  name: my-project-id # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
 spec:
   # This name can be changed to something more human-readable if desired.
-  name: ${PROJECT_ID?} # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
+  name: my-project-id # {"$ref":"#/definitions/io.k8s.cli.setters.project-id"}
   billingAccountRef:
-    # Replace "${BILLING_ACCOUNT_ID?}" with the numeric ID for your billing account
-    external: "${BILLING_ACCOUNT_ID?}" # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
+    external: my-billing-account # {"$ref":"#/definitions/io.k8s.cli.setters.billing-account"}
