fix username typo

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # Main team administering overall repo
-*           @morgante @abharathkkb @ocsig
+*           @morgante @bharathkkb @ocsig
 
 # Deployment Manager Reviewers
 /dm/        @morgante @ocsig @sjvanrossum
