--- a/config-connector/solutions/projects/helm/project-hierarchy/project/Chart.yaml
+++ b/config-connector/solutions/projects/helm/project-hierarchy/project/Chart.yaml
@@ -15,4 +15,4 @@
 apiVersion: v1
 name: project-hierarchy
 version: 0.1.0
-description: create a folder in an organization and a project beneath it
+description: create project in a folder
