Add missing import for gcs_bucket prerequisite resource

--- a/dm/templates/backend_bucket/tests/integration/backend_bucket.yaml
+++ b/dm/templates/backend_bucket/tests/integration/backend_bucket.yaml
@@ -3,6 +3,8 @@
 imports:
   - path: templates/backend_bucket/backend_bucket.py
     name: backend_bucket.py
+  - path: templates/gcs_bucket/gcs_bucket.py
+    name: gcs_bucket.py
 
 resources:
 
