Make yaml file use bats var and fix output check

--- a/dm/templates/backend_bucket/tests/integration/backend_bucket.yaml
+++ b/dm/templates/backend_bucket/tests/integration/backend_bucket.yaml
@@ -12,7 +12,7 @@ resources:
     type: backend_bucket.py
     properties:
       bucketName: '$(ref.${BUCKET_NAME}.name)'
-      enableCdn: true
+      enableCdn: ${ENABLE_CDN}
 
   # Prerequisite bucket resource
   - name: ${BUCKET_NAME}
