--- a/config-connector/solutions/projects/helm/project-services/Chart.yaml
+++ b/config-connector/solutions/projects/helm/project-services/Chart.yaml
@@ -15,4 +15,4 @@
 apiVersion: v1
 name: project-services
 version: 0.1.0
-description: Enable services on a project
+description: Enable services on a desired project
