Fix Cloud Build trigger example & template schema
Revert `triggerTemplate` schema to match
https://cloud.google.com/cloud-build/docs/api/reference/rest/v1/RepoSource

Fix example to match
https://cloud.google.com/cloud-build/docs/api/reference/rest/v1/projects.triggers

--- a/dm/templates/cloudbuild/examples/cloudbuild_trigger.yaml
+++ b/dm/templates/cloudbuild/examples/cloudbuild_trigger.yaml
@@ -28,7 +28,7 @@ resources:
       triggerTemplate:
         repoName: '<FIXME:repo_name>'
         branchName: 'master'
-      buildTemplate:
+      build:
         steps:
           - name: 'gcr.io/cloud-builders/docker'
             args:
